<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaskFragment"
    android:layout_margin="8dp">


    <TextView
        android:id="@+id/name_title_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/name_title" />

    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/name_title_view"
        android:ems="10"
        android:hint="@string/name_hint"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/desc_title_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/name_edit_text"
        android:layout_marginTop="8dp"
        android:text="@string/description_title" />

    <EditText
        android:id="@+id/desc_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/desc_title_view"
        android:ems="10"
        android:hint="@string/description_hint"
        android:inputType="textPersonName" />

    <CheckBox
        android:id="@+id/done_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/date_button"
        android:text="@string/done_box" />

    <Button
        android:id="@+id/date_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/desc_edit_text" />
</RelativeLayout>